[package]
name = "deaggregator"
version = "1.0.0"
authors = ["Keith Amling <me@amling2.org>"]

[dependencies]
record = { path = "../record" }
registry = { path = "../registry" }
registry_args = { path = "../registry_args" }
registry_args_derive = { path = "../registry_args_derive" }
validates = { path = "../validates" }
lazy_static = "=1.2.0"
