[package]
name = "operation"
version = "1.0.0"
authors = ["Keith Amling <me@amling2.org>"]
edition = "2018"

[dependencies]
aggregator = { path = "../aggregator" }
bgop = { path = "../bgop" }
clumper = { path = "../clumper" }
deaggregator = { path = "../deaggregator" }
executor = { path = "../executor" }
opts = { path = "../opts" }
record = { path = "../record" }
registry = { path = "../registry" }
registry_args = { path = "../registry_args" }
registry_args_derive = { path = "../registry_args_derive" }
sorts = { path = "../sorts" }
stream = { path = "../stream" }
validates = { path = "../validates" }
validates_derive = { path = "../validates_derive" }
lazy_static = "=1.2.0"
regex = "=1"
serde_json = "=1.0"
